Fix more unit tests
Signed-off-by: Suraj Singh <surajrider@gmail.com>